style.css
html,
body {
    height: 100%
}

.carousel-control-prev-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23B22222' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
}

.carousel-control-next-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23B22222' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
}

.content {
    padding-top: 8vw;
}

.dashed {
    border-bottom: 1px dashed lightgray !important;
}

.dotted {
    background-image: linear-gradient(to right, lightgray 10%, white 0%);
    background-position: bottom;
    background-size: 10px 1px;
    background-repeat: repeat-x;
}

a,
h2 {
    font-family: Merienda One;
}

.header,
.footer {
    text-align: center;
}

.header {
    line-height: 5vw;
}

img {
    width: 100%;
}

.navbar {
    border-bottom: 1px solid gray;
}

.footer {
    font-size: 1.5vw;
    line-height: 2.5vw;
    border-top: 1px solid gray;
    padding: 25px;
    bottom: 0;
    width: 100%;
}

.nav-link {
    font-size: 1.5vw;
    padding-right: .25em;
    padding-left: .25em;
}

.container {
    padding-bottom: 10px;
}

#company-name {
    font-size: 2.25vw;
    font-weight: 500;
}

.navbar-brand {
    font-size: 5vw;
}

a:link,
a:visited {
    color: darkgray;
}

a:active,
a:hover {
    color: brown;
    text-decoration: none;
}

.nav-link:hover {
    color: brown !important;
}

.dropdown-menu {
    width: 200px;
    left: 50%;
    margin-left: -100px;
}

.dropdown-item {
    line-height: 2vw;
}

.nav-link:before {
    content: "";
    position: absolute;
    width: 100%;
    height: 3px;
    bottom: 0;
    left: 0;
    background: brown;
    visibility: hidden;
    border-radius: 5px;
    transform: scaleX(0);
    transition: .25s linear;
}

.nav-link:hover:before,
.nav-link:focus:before {
    visibility: visible;
    transform: scaleX(1);
}

@media (max-width: 991px) {
    .nav-link {
        font-size: 4vw;
        text-align: left;
    }
    #company-name {
        display: none;
    }
    .dropdown-menu {
        width: 100%;
        left: 0%;
        margin-left: 0px;
    }
    .footer {
        font-size: 4vw;
        line-height: 6vw;
    }
    .content {
        padding-top: 15vw;
    }
}

